--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "compression": "^1.7.4",
+    "config": "^3.3.1",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
+    "helmet": "^4.1.0",
+    "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   }
 }
