--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "compression": "^1.7.4",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
